# gpt

./: .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  README.md  mypy.ini  pyproject.toml
app/: train.ipynb  train.py
app/src/: bigram.py  data.py  gpt.py  utils.py
main/: train.ipynb  train.py
main/src/: data.py  gpt.py  utils.py
